--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ PyMsgBox==1.0.9
 pyOpenSSL==22.1.0
 pyparsing==3.0.9
 pyperclip==1.8.2
+pypiwin32==223
 PyRect==0.2.0
 pyrsistent==0.18.1
 PyScreeze==0.1.28
